--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -5,10 +5,10 @@ clean_a:
 	rm -f hw2a
 a: clean_a
 	flex -o a/lex.yy.c a/lexer.lex
-	g++ -o hw2a a/*.cpp a/*.c
+	g++ -g -o hw2a a/*.cpp a/*.c
 
 clean_b:
 	rm -f hw2b
 b: clean_b
-	g++ -o hw2b b/*.cpp
+	g++ -g -o hw2b b/*.cpp
 
