failing ifs now

--- a/HW5/tests/basic_expression_tests/basic_vars1.in
+++ b/HW5/tests/basic_expression_tests/basic_vars1.in
@@ -3,9 +3,9 @@ void main(){
 	printi(x);
 	print("\n");
 	int y=x+5;
-	printi(x);
+	printi(y);
 	print("\n");
-	int x=x+y;
+	x=x+y;
 	printi(x);
 	print("\n");
 }
