--- a/HW5/tests/booleans_tests/bool_1_consts.in
+++ b/HW5/tests/booleans_tests/bool_1_consts.in
@@ -1,15 +1,15 @@
 void main(){
 
 	if(true){
-		print("true\n");
+		print("true1\n");
 	} else {
-		print("false\n");
+		print("false2\n");
 	}
 	
 	if(false){
-		print("true\n");
+		print("true3\n");
 	} else {
-		print("false\n");
+		print("false4\n");
 	}
 	
 }
