--- a/HW5/tests/booleans_tests/bool_3_logops.in
+++ b/HW5/tests/booleans_tests/bool_3_logops.in
@@ -2,60 +2,60 @@ void main(){
 
 	print("not: \t");
 	if(not true){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	if(not false){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	print("\n");
-	
+
 	print("and: \t");
 	if(true and true){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	if(true and false){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	if(false and true){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	if(false and false){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	print("\n");
-	
+
 	print("or: \t");
 	if(true or true){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	if(true or false){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	if(false or true){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	if(false or false){
-		print("true"\t);
+		print("true\t");
 	} else {
-		print("false"\t);
+		print("false\t");
 	}
 	print("\n");
 }
