--- a/HW5/tests/booleans_tests/bool_5_complex.in
+++ b/HW5/tests/booleans_tests/bool_5_complex.in
@@ -1,44 +1,32 @@
 void main(){
-	bool x;
-	if(x){
-		print("true\n");
+	bool t1 = true or not true;
+	if(t1){
+		print("true1\n");
 	} else {
-		print("false\n");
+		print("false1\n");
 	}
-
-	bool y = 30 != 30;
-	bool z = ((1 b == 1 and not y) or ((true))) and not not not x and not not false or true;
-	if(z){
-		print("true\n");
+	bool t2 = not not t1;
+	if(t2){
+		print("true2\n");
 	} else {
-		print("false\n");
+		print("false2\n");
 	}
-
-	x = not ((0==1)
-		or((10==1)
-		or((11==1)
-		or((12==1)
-		or((13==1)
-		or((14==1)
-		or((15==1)
-		or((16==1)
-		or((17==1)
-		or((18==1)
-		or((19==1)
-		or((111==1)
-		or((1==111)
-		or((111==1)
-		or((1==111)
-		or((111==1)
-		or((1==111)
-		or((111==1)
-		or((1==111)
-		or (111==1)
-		))))))))))))))))))); // checking whether you use registers to save truth values
-
-	if(x){
-		print("true\n");
+	bool t3 = not t1 or t2;
+	if(t3){
+		print("true3\n");
 	} else {
-		print("false\n");
+		print("false3\n");
 	}
+	bool t4 = (t1 and t2) and t3;
+	if(t4){
+		print("true4\n");
+	} else {
+		print("false4\n");
+	}
+	if(t1 and (t2 and t3)){
+		print("true5\n");
+	} else {
+		print("false5\n");
+	}
+	
 }
