--- a/HW5/tests/while_tests/while_3_break2.in
+++ b/HW5/tests/while_tests/while_3_break2.in
@@ -1,4 +1,4 @@
-void main{	
+void main(){	
 	int x = 1;
 	while(x == 3 or x > 1 and x < 3 or x == 1){
 		if(x >= 3){
@@ -7,9 +7,9 @@ void main{
 		}
 		printi(x);
 		print("\n");
-		x = x+1;
 		if(x >= 3){
 			print("why are you still here ?!");
 		}
+		x = x+1;
 	}
 }
