--- a/HW5/tests/func_tests/func_test10.in
+++ b/HW5/tests/func_tests/func_test10.in
@@ -5,7 +5,7 @@ int goo(int x1,int x2,int x3,int x4,int x5,int x6,int x7,int x8,int x9,int x10,i
 
 void main(){
   int y=goo(1,1,1,1,1,1,1,1,1,1,1,1,1,1,1);
-	printi(x);
+	printi(y);
   print("\n");
 
 	printi(goo(1,1,1,1,1,1,1,1,1,1,1,1,1,1,1));
