--- a/HW5/tests/switch_tests/switch_2_simple.in
+++ b/HW5/tests/switch_tests/switch_2_simple.in
@@ -7,7 +7,7 @@ void main(){
 		case 2:
 		printi(2);
 		x = x+1;
-	}
+	};
 	switch(1 * x * 1){
 		case 0:
 		printi(0);
@@ -15,8 +15,10 @@ void main(){
 		printi(5);
 		case 3:
 		printi(3);
+		case 4:
 		printi(4);
+		break;
 		case 5:
 		printi(5);
-	}
+	};
 }
