--- a/HW5/tests/switch_tests/switch_4_multiple.in
+++ b/HW5/tests/switch_tests/switch_4_multiple.in
@@ -4,9 +4,9 @@ void main(){
 		print("first");
 		break;
 		case 2:
-		printi("WTF");
+		print("WTF");
 		break;
 		case 8:
 		print("second");
-	}
+	};
 }
