--- a/HW5/tests/more_tests/smart_reg_mng2.in
+++ b/HW5/tests/more_tests/smart_reg_mng2.in
@@ -97,6 +97,7 @@ void main()
 	int d = 2;
 	print("left");
 	int res = foo0(foo1(foo2(foo3(foo4(foo5(foo6(foo7(foo8(foo9(foo10(foo11(foo12(foo13(foo14(foo15(foo16(foo17(foo18(4,4),4),4),4),4),4),4),4),4),4),4),4),4),4),4),4),4),4),4);
+        printi(res);
 	print("right");
 
 }
