--- a/HW5/tests/more_tests/switch_drop.in
+++ b/HW5/tests/more_tests/switch_drop.in
@@ -11,7 +11,7 @@ void main()
 			print("BASA");
 			break;
 		case 4:
-			print("YA"); //check out it should behave
+			print("YA\n"); //check out it should behave
 	};
 	print("aldante");
 }
