--- a/HW5/tests/more_tests/bool_eval1.in
+++ b/HW5/tests/more_tests/bool_eval1.in
@@ -1,47 +1,49 @@
 bool foofalse()
 {
 	printi(0);
+	print("\n");
 	return false;
 }
 bool tootrue()
 {
 	printi(1);
+	print("\n");
 	return true;
 }
 
 void main()
 {
 	bool x;
-	print("B:");
+	print("B:\n");
 	x = true or foofalse();
 	if(x)
-		print("TRUE");
-	print("C:");
+		print("TRUE\n");
+	print("C:\n");
 	x = false or foofalse();
 	if(x)
-		print("TRUE");
-	print("D:");
+		print("TRUE\n");
+	print("D:\n");
 	x = true or tootrue();
 	if(x)
-		print("TRUE");
-	print("E:");
+		print("TRUE\n");
+	print("E:\n");
 	x = false or tootrue();
 	if(x)
-		print("TRUE");
-	print("F:");
+		print("TRUE\n");
+	print("F:\n");
 	x = true and foofalse();
 	if(x)
-		print("TRUE");
-	print("G:");
+		print("TRUE\n");
+	print("G:\n");
 	x = false and foofalse();
 	if(x)
-		print("TRUE");
-	print("H:");
+		print("TRUE\n");
+	print("H:\n");
 	x = true and tootrue();
 	if(x)
-		print("TRUE");
-	print("I:");
+		print("TRUE\n");
+	print("I:\n");
 	x = false and tootrue();
 	if(x)
-		print("TRUE");
+		print("TRUE\n");
 }
