--- a/HW5/tests/more_tests/smart_reg_mng3.in
+++ b/HW5/tests/more_tests/smart_reg_mng3.in
@@ -97,6 +97,7 @@ void main()
 	int d = 2;
 	print("left");
 	int res = foo0(0,foo1(1,foo2(2,foo3(3,foo4(4,foo5(5,foo6(6,foo7(7,foo8(8,foo9(9,foo10(10,foo11(11,foo12(12,foo13(13,foo14(14,foo15(15,foo16(16,foo17(17,foo18(4,4)))))))))))))))))));
+        printi(res);
 	print("left");
 
 }
