--- a/HW5/tests/more_tests/smart_reg_mng4.in
+++ b/HW5/tests/more_tests/smart_reg_mng4.in
@@ -97,6 +97,7 @@ void main()
 	int d = 2;
 	print("left");
 	int res = foo0(foo1(foo2(foo3(foo4(foo5(foo6(foo7(foo8(foo9(foo10(foo11(foo12(foo13(foo14(foo15(foo16(foo17(foo18(4,4),4),4),4),4),4),4),4),4),4),4),4),4),4),4),4),4),4),foo1(foo2(foo3(foo4(foo5(foo6(foo7(foo8(foo9(foo10(foo11(foo12(foo13(foo14(foo15(foo16(foo17(foo18(18,18),17),16),15),14),13),12),11),10),9),8),7),6),5),4),3),2),1));
+        printi(res);
 	print("both");
 
 }
