--- a/HW5/tests/overflow_tests/overflowtest01.in
+++ b/HW5/tests/overflow_tests/overflowtest01.in
@@ -3,29 +3,30 @@ void main(){
 	byte byte2;
 
 
-	printi(byte1 - 1);
+	printi(byte1 - 1 b);
 	print("\n");
 
-	byte2=byte1
+	byte2=byte1-1 b;
 	printi(byte2);
 	print("\n");
 
-	printi(16*16);
+	printi(16 b*16 b);
 	print("\n");
 
-	printi(byte2+1);
+	printi(byte2+1 b);
 	print("\n");
 
-	printi(byte2+3);
+	//print 5
+	printi(byte2+3 b);
 	print("\n");
 
 	printi(255 b + 255 b);
 	print("\n");
 
-	int maxint=2147483647
-	int minint=0-2147483648
-	int another_minint=2147483648
-	int another_maxint=0-2147483649
+	int maxint=2147483647;
+	int minint=0-2147483648;
+	int anotherminint=2147483648;
+	int anothermaxint=0-2147483649;
 	int num1;
 	int num2;
 
@@ -37,41 +38,45 @@ void main(){
 	printi(maxint);
 	print("\n");
 
-	printi(another_maxint );
+	printi(anothermaxint );
 	print("\n");
 
+	//print 10
 	printi(minint );
 	print("\n");
 
-	printi(another_minint );
+	printi(anotherminint );
 	print("\n");
 
-	num1=maxint+1
+	num1=maxint+1;
 
 	printi(num1);
 	print("\n");
 
-	num2=maxint+maxint+2
+	num2=maxint+maxint+2;
 
+	//print 14
 	printi(num2);
 	print("\n");
 
-	num2=maxint+1+num1
+	//print 15
+	num2=maxint+1+num1;
 	printi(num2);
 	print("\n");
 
+	//print 16
 	printi(100000*100000);
 	print("\n");
 
-	byte1=200;
-	byte2=100;
+	byte1=200 b;
+	byte2=100 b;
 
-	int1=byte1+byte2;
-	printi(int1);
+	num1=byte1+byte2;
+	printi(num1);
 	print("\n");
 
-	int1=byte1+byte2;
-	printi(int1);
+	num2=byte1+(byte2+0);
+	printi(num2);
 	print("\n");
 
 }
